Removed unused methods